--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-state-custom",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "A React library built with Vite and TypeScript",
   "type": "module",
   "main": "dist/index.umd.js",
@@ -17,7 +17,7 @@
   "dependencies": {
     "events": "^3.3.0",
     "lodash-es": "^4.17.21",
-    "react-object-view-bigint": "^0.3.4",
+    "vite-bundle-analyzer": "^1.1.0",
     "vite-plugin-dts": "^4.5.4"
   },
   "devDependencies": {
