--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "vite-bundle-analyzer": "^1.1.0",
     "vite-plugin-dts": "^4.5.4"
   },
+  "peerDependencies": {
+    "react": "19",
+    "react-dom": "19"
+  },
   "devDependencies": {
     "@types/events": "^3",
     "@types/lodash-es": "^4",
     "@types/react": "19",
     "@types/react-dom": "19",
     "@vitejs/plugin-react": "^4.5.2",
-    "react": "19",
-    "react-dom": "19",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
   },
