remove all dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-state-custom",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "A React library built with Vite and TypeScript",
   "type": "module",
   "main": "dist/index.umd.js",
@@ -14,24 +14,18 @@
   "keywords": [],
   "author": "Your Name",
   "license": "MIT",
-  "dependencies": {
-    "events": "^3.3.0",
-    "lodash-es": "^4.17.21",
-    "vite-bundle-analyzer": "^1.1.0",
-    "vite-plugin-dts": "^4.5.4"
-  },
   "peerDependencies": {
     "react": "19",
     "react-dom": "19"
   },
   "devDependencies": {
-    "@types/events": "^3",
-    "@types/lodash-es": "^4",
     "@types/react": "19",
     "@types/react-dom": "19",
-    "@vitejs/plugin-react": "^4.5.2",
+    "@vitejs/plugin-react": "^5.0.0",
     "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "vite": "7",
+    "vite-bundle-analyzer": "^1.1.0",
+    "vite-plugin-dts": "^4.5.4"
   },
   "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
 }
