--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "react-state-custom",
-  "version": "1.0.13",
+  "version": "1.0.15",
   "description": "A React library built with Vite and TypeScript",
   "type": "module",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "bugs": {
+    "url": "https://github.com/vothanhdat/react-state-custom/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vothanhdat/react-state-custom.git"
+  },
   "scripts": {
     "build": "vite build",
     "dev": "vite",
