--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vitejs/plugin-react": "^5.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-obj-view": "^1.0.4",
     "typescript": "^5.8.3",
     "vite": "7",
     "vite-bundle-analyzer": "^1.1.0",
