Refactor TimerExample to use milliseconds for more precise timing
- Changed state from seconds to milliseconds for finer granularity.
- Updated the interval to 10ms for more accurate timing.
- Adjusted formatted time to display minutes, seconds, and milliseconds.
- Modified reset function to reset milliseconds instead of seconds.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "19"
   },
   "devDependencies": {
+    "@codesandbox/sandpack-react": "^2.20.0",
     "@types/react": "19",
     "@types/react-dom": "19",
     "@vitejs/plugin-react": "^5.0.0",
