--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "build": "vite build",
     "build:demo": "vite build --config vite.config.dev.ts",
-    "dev": "vite --config vite.config.dev.ts",
+    "dev": "vite",
+    "dev:playground": "vite --config vite.config.dev.ts",
     "test": "echo \"No tests specified\" && exit 0",
     "preview": "vite preview --config vite.config.dev.ts"
   },
