refactor: optimize npm package to include only library files
- Update files field to explicitly list included files
- Exclude examples, playground, and dev directories from package
- Reduce package size from 159KB to 156KB (22 files total)
- Only include core library files: index, state-utils, dev-tool, and CSS

--- a/.npmignore
+++ b/.npmignore
@@ -29,6 +29,10 @@ yarn.lock
 src/examples/
 src/playground/
 src/dev/
+dist/examples/
+dist/playground/
+dist/dev/
+dist/dev.d.ts
 
 # Other
 .DS_Store
