feat: add ErrorBoundary to dev and refactor counter state management

--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "@types/react": "19",
     "@types/react-dom": "19",
     "@vitejs/plugin-react": "^5.0.0",
+    "babel-plugin-react-compiler": "^1.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-error-boundary": "^6.0.0",
     "react-obj-view": "^1.0.4",
     "react-state-custom": "^1.0.24",
     "typescript": "^5.8.3",
