--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "devDependencies": {
     "@codesandbox/sandpack-react": "^2.20.0",
-    "@types/react": "19",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "19",
     "@vitejs/plugin-react": "^5.0.0",
     "babel-plugin-react-compiler": "^1.0.0",
