--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "react-dom": "19"
   },
   "devDependencies": {
-    "@codesandbox/sandpack-react": "^2.20.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "19",
     "@vitejs/plugin-react": "^5.0.0",
@@ -64,5 +63,8 @@
     "vite-bundle-analyzer": "^1.1.0",
     "vite-plugin-dts": "^4.5.4"
   },
-  "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
+  "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728",
+  "dependencies": {
+    "@stackblitz/sdk": "^1.11.0"
+  }
 }
