--- a/src/playground/files/package.json
+++ b/src/playground/files/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "babel-plugin-react-compiler": "^1.0.0",
     "typescript": "^5.6.3",
+    "react-error-boundary": "^6.0.0",
     "vite": "^6.0.1"
   },
   "packageManager": "pnpm@9.0.0"
