--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "19"
   },
   "devDependencies": {
+    "@picocss/pico": "^2.1.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "19",
     "@vitejs/plugin-react": "^5.0.0",
