--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ dist-ssr
 demo-dist
 *.local
 
+# Test coverage
+coverage
+.vitest
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
