feat: replace useArrayHash with useArrayChangeId and update related documentation and tests

--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "build:demo": "vite build --config vite.config.dev.ts",
     "dev": "vite",
     "dev:playground": "vite --config vite.config.dev.ts",
-    "test": "vitest --config vitest.config.test.ts",
+    "test": "vitest run --config vitest.config.test.ts",
+    "test:watch": "vitest --config vitest.config.test.ts",
     "test:ui": "vitest --ui --config vitest.config.test.ts",
-    "test:coverage": "vitest --coverage --config vitest.config.test.ts",
+    "test:coverage": "vitest run --coverage --config vitest.config.test.ts",
     "test:run": "vitest run --config vitest.config.test.ts",
     "preview": "vite preview --config vite.config.dev.ts",
     "prepublishOnly": "yarn build"
