--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "19"
   },
   "devDependencies": {
+    "@stackblitz/sdk": "^1.11.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -67,7 +68,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
-    "react-obj-view": "^1.0.4",
+    "react-obj-view": "^1.0.5",
     "react-state-custom": "^1.0.24",
     "typescript": "^5.8.3",
     "vite": "7",
@@ -80,6 +81,6 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "@stackblitz/sdk": "^1.11.0"
+    "@uiw/react-split": "^5.9.3"
   }
 }
