--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-state-custom",
   "version": "1.0.32",
-  "description": "The `react-state-custom` library provides a powerful set of tools for managing shared state in React applications",
+  "description": "Turn any React hook into global state. No boilerplate, no complexity—just pure, performant state management.",
   "type": "module",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
